WebHelpers ChangeLog

0.2.1 (**svn**)
* More precise distance_of_time_in_words (Follows bottom half of #4989 Rails
  changeset)
* button_to accepts method keyword so you can PUT and DELETE with it. 
  (Follows #4914 Rails changeset)
* Fixed auto_link to parse more valid url formats (Thanks Jamie Wilkinson).
* Sync'd text helper from latest Rails version.
* Fixed form tag's method matching to be case insensitive.

0.2 (8/31/06)
* Adding simplejson req, adding use of json'ification. Updated scriptaculous
  helpers to split out JS generation for use in JS Generation port.
* Finished sync'ing Rails ports (urls, tags) in WebHelpers. Closes #69.
  url and prototype tests updated, url helpers updated to handle method
  argument.
* Sync'd scriptaculous helper.
* Sync'd javascript, prototype helpers and prototype.js to latest Rails
  modifications. Added more prototype tests.
* Sync'd form_options, form_tag helpers. form_tag's form function can now
  accept other HTTP methods, and will include a hidden field for them if
  its not 'get' or 'post'.
* Sync'd number helper, added number unit tests.
* Added markdown.py (python-markdown) for new markdown support in text helper.
* Added textile.py (PyTextile) for new textilize support in text helper.
* Brought asset/date/text helpers up to date with revision info.

0.1.3 (Release)
* Brought feedgenerator in line with Django's version, which fixed the missing
  support for feed categories and updated classes for new-style. Other minor
  feed updates as well. Now synced as of Django r3143.
* Fixed typo in feedgenerator import, reported by tiksin@free.fr.
* Added ``webhelpers.rails.asset_tag``, for generating links to other assets
  such as javascripts, stylesheets, and feeds.