@@ -1,6 +1,8 @@
 WebHelpers ChangeLog
 
 0.2.1 (**svn**)
+* Updated radio_button so that id's are unique. Brings up to date with Rails
+  changeset #4925, also fixes #103.
 * More precise distance_of_time_in_words (Follows bottom half of #4989 Rails
   changeset)
 * button_to accepts method keyword so you can PUT and DELETE with it. 
